--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
         "vscode": "^1.17.0"
     },
     "categories": [
-        "Languages"
+        "Programming Languages"
     ],
     "activationEvents": [
         "onLanguage:kukulkan"
@@ -27,7 +27,8 @@
                     "kukulkan"
                 ],
                 "extensions": [
-                    ".3k"
+                    ".3k",
+                    "kukulkan"
                 ],
                 "configuration": "./language-configuration.json"
             }
